feat: add sessions to campaigns
